feature(build) - Add build watch functionality.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Snappy Dash</title>
-    <style media="screen" href="assets/css/snappy-dash.css"></style>
+    <link rel="stylesheet" href="assets/css/snappy-dash.css">
   </head>
   <body>
     <header>
