feature(build) - Add postcss plugins for nesting and variables.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="assets/css/snappy-dash.css">
   </head>
   <body>
+    <div class="left-nav"></div>
+    
     <header>
       <h1>Snappy Dash</h1>
     </header>
