feature(build) - Add browserify shim for global libs.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -38,6 +38,7 @@
       <p>Some content here..</p>
     </div>
 
+    <script src="assets/js/vendor.js"></script>
     <script src="assets/js/snappy-dash.js"></script>
   </body>
 </html>
