feature(layout) - Update padding to make things less cramped.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -70,7 +70,7 @@
           <div class="filter-panel__group">
             <form>
               <fieldset>
-                <legend>Status</legend>
+                <legend>Filter by status</legend>
                 <div class="filter-panel-field">
                   <input type="checkbox" id="status1">
                   <label for="status1">Active</label>
