--- a/src/static/index.html
+++ b/src/static/index.html
@@ -93,39 +93,53 @@
 
       <div id="l-main">
         <div class="main-content">
-          <div class="graph-panel">
-
+          <div class="snappy-panel">
+            <div class="snappy-panel__header">
+              <h2>Status Summary</h2>
+            </div>
+            <div class="snappy-panel__content">
+              <div class="snappy-placeholder">
+                <img src="http://placehold.it/300?text=graph1" alt="graph1" /><img src="http://placehold.it/300?text=graph2" alt="graph2" /><img src="http://placehold.it/300?text=graph3" alt="graph3" />
+              </div>
+            </div>
           </div>
-          <div class="activity-list">
-            <div class="activity-list-item">
-              <div class="activity-list-item__icon">A</div>
-              <div class="activity-list-item__description">
-                Some application was deployed
-              </div>
+
+          <div class="snappy-panel">
+            <div class="snappy-panel__header">
+              <h2>Recent Activity</h2>
             </div>
-            <div class="activity-list-item">
-              <div class="activity-list-item__icon">R</div>
-              <div class="activity-list-item__description">
-                Some application was deployed
-              </div>
-            </div>
-            <div class="activity-list-item">
-              <div class="activity-list-item__icon">A</div>
-              <div class="activity-list-item__description">
-                Some application was deployed
-              </div>
-            </div>
-            <div class="activity-list-item">
-              <div class="activity-list-item__icon">A</div>
-              <div class="activity-list-item__description">
-                Some application was deployed
+            <div class="snappy-panel__content">
+              <div class="activity-list">
+                <div class="activity-list-item">
+                  <div class="activity-list-item__icon">A</div>
+                  <div class="activity-list-item__description">
+                    Some application was deployed
+                  </div>
+                </div>
+                <div class="activity-list-item">
+                  <div class="activity-list-item__icon">R</div>
+                  <div class="activity-list-item__description">
+                    Some application was deployed
+                  </div>
+                </div>
+                <div class="activity-list-item">
+                  <div class="activity-list-item__icon">A</div>
+                  <div class="activity-list-item__description">
+                    Some application was deployed
+                  </div>
+                </div>
+                <div class="activity-list-item">
+                  <div class="activity-list-item__icon">A</div>
+                  <div class="activity-list-item__description">
+                    Some application was deployed
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <script src="assets/js/vendor.js"></script>
     <script src="assets/js/snappy-dash.js"></script>
   </body>
