feature(fonts) - Add typicons because fonts are awesome.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Snappy Dash</title>
     <link rel="stylesheet" href="assets/css/vendor.css">
+    <link rel="stylesheet" href="typicons/typicons.css" />
     <link rel="stylesheet" href="assets/css/snappy-dash.css">
   </head>
   <body>
@@ -15,40 +16,40 @@
         <div id="l-left-nav-primary">
           <div class="nav-tile">
             <a href="#">
-              <div class="nav-tile__icon">Da</div>
+              <div class="nav-tile__icon typcn typcn-home"></div>
               <h2 class="nav-tile__label">Dashboard</h2>
             </a>
           </div>
           <div class="nav-tile  nav-tile__active">
             <a href="#">
-              <div class="nav-tile__icon">A</div>
+              <div class="nav-tile__icon typcn typcn-th-small"></div>
               <h2 class="nav-tile__label">Applications</h2>
             </a>
           </div>
           <div class="nav-tile">
             <div class="nav-tile__counter">20</div>
             <a href="#">
-              <div class="nav-tile__icon">R</div>
+              <div class="nav-tile__icon typcn typcn-flow-switch"></div>
               <h2 class="nav-tile__label">Releases</h2>
             </a>
           </div>
           <div class="nav-tile">
             <div class="nav-tile__counter">3</div>
             <a href="#">
-              <div class="nav-tile__icon">De</div>
+              <div class="nav-tile__icon typcn typcn-export"></div>
               <h2 class="nav-tile__label">Deployments</h2>
             </a>
           </div>
           <div class="nav-tile">
             <a href="#">
-              <div class="nav-tile__icon">Q</div>
+              <div class="nav-tile__icon typcn typcn-support"></div>
               <h2 class="nav-tile__label">Questions?</h2>
             </a>
           </div>
         </div>
 
         <div id="l-left-nav-secondary">
-          <h2  class="filter-panel__title">Filter Applications</h2>
+          <h2 class="filter-panel__title">Filter Applications</h2>
 
           <div class="filter-panel__group">
             <form>
