feature(routing) - Link to routes by name rather than path.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,33 +15,33 @@
       <div id="l-left-nav">
         <div id="l-left-nav-primary">
           <div class="nav-tile">
-            <a v-link="{ path: '/dashboard' }">
+            <a v-link="{ name: 'dashboard' }">
               <div class="nav-tile__icon typcn typcn-home"></div>
               <h2 class="nav-tile__label">Dashboard</h2>
             </a>
           </div>
           <div class="nav-tile">
-            <a v-link="{ path: '/applications' }">
+            <a v-link="{ name: 'applications' }">
               <div class="nav-tile__icon typcn typcn-th-small"></div>
               <h2 class="nav-tile__label">Applications</h2>
             </a>
           </div>
           <div class="nav-tile">
             <div class="nav-tile__counter">20</div>
-            <a v-link="{ path: '/releases' }">
+            <a v-link="{ name: 'releases' }">
               <div class="nav-tile__icon typcn typcn-flow-switch"></div>
               <h2 class="nav-tile__label">Releases</h2>
             </a>
           </div>
           <div class="nav-tile">
             <div class="nav-tile__counter">3</div>
-            <a v-link="{ path: '/deployments' }">
+            <a v-link="{ name: 'deployments' }">
               <div class="nav-tile__icon typcn typcn-export"></div>
               <h2 class="nav-tile__label">Deployments</h2>
             </a>
           </div>
           <div class="nav-tile">
-            <a v-link="{ path: '/support' }">
+            <a v-link="{ name: 'support' }">
               <div class="nav-tile__icon typcn typcn-support"></div>
               <h2 class="nav-tile__label">Support</h2>
             </a>
